<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scanqr.payment.PaymentActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="Kembali"
        app:title="@string/payment_review"
        app:titleTextColor="@color/white"
        app:titleCentered="true"
        android:background="@color/blue_dark"
        app:navigationIcon="@drawable/baseline_back_24"/>

    <LinearLayout
        android:id="@+id/recipientInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvMerchantLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMerchantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wahid"
            android:textSize="20sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paymentInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/recipientInfoLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvPaymentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="25sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp 100.000"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvNoteLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Catatan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/paymentInfoLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="Tambahkan Catatan Anda disini"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_background"
        android:gravity="top|start"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteLabel"/>


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_payment"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
